[package]
name = "oxideav-mov"
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust Apple QuickTime File Format (QTFF) demuxer — atom walker, sample-table parser, codec FourCC resolution via oxideav-core registry"
repository = "https://github.com/OxideAV/oxideav-mov"
homepage = "https://github.com/OxideAV/oxideav-mov"
readme = "README.md"
keywords = ["multimedia", "container", "quicktime", "mov", "qtff"]
categories = ["multimedia::encoding"]

[features]
default = ["registry"]

# Wires up the demuxer trait implementation against `oxideav-core` so the
# crate plugs into the `oxideav` framework registry. Default-on; turn off
# for the standalone build path that exposes a free-standing parsing API
# without the framework dependency tree.
registry = ["dep:oxideav-core"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# downstream consumers can depend on `oxideav-mov` with
# `default-features = false` and avoid the framework dependency tree
# entirely.
oxideav-core = { version = "0.1", optional = true }

# `compcol` (Karpelès Lab's compression collection, the workspace-wide
# choice for byte-stream codecs) supplies the RFC 1950 zlib stream that
# QTFF compressed movie resources are stored in (QTFF pp. 80 – 81: the
# `cmov/dcom` atom names the lossless algorithm and `'zlib'` is the
# conventional value). `default-features = false` keeps the dependency
# to exactly that one algorithm. Present in both the registry and the
# standalone build paths — the decompression step is part of the core
# parsing surface, not of the framework wiring.
compcol = { version = "0.6", default-features = false, features = ["zlib"] }
